--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
   color-scheme: light;
   color: #213547;
-  background-color: #ffffff;
+  background-color: #FDF7F2;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
